--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="dein-bild.jpg" alt="Pulsierendes Bild">
+        <img src="avatar_1.png" alt="Pulsierendes Bild">
     </div>
 </body>
 </html>
