--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="pulse1"></div>
         <div class="pulse2"></div>
         <div class="pulse3"></div>
-        <img src="avatar_3.png" alt="Pulsierendes Bild" class="avatar_bild">
+        <img src="avatar_3.jpg" alt="Pulsierendes Bild" class="avatar_bild">
     </div>
 </body>
 </html>
